fix: swapping specs counting enemy specs